priority 타입 변경 (Number > INTEGER)